RESOLVED FIXED23127
Misuses of pango_coverage_get and pango_coverage_from_bytes.
https://bugs.webkit.org/show_bug.cgi?id=23127
Summary Misuses of pango_coverage_get and pango_coverage_from_bytes.
Hiroyuki Ikezoe
Reported 2009-01-05 19:27:14 PST
The second argument of pango_coverage_get should be a Unicode character. The first argument of pango_coverage_from_bytes should be binary data generated from pango_coverage_to_bytes.
Attachments
Proposed patch (1.66 KB, patch)
2009-01-05 19:34 PST, Hiroyuki Ikezoe
zecke: review+
expand tabs in ChangeLog. (1.67 KB, patch)
2009-01-07 18:05 PST, Hiroyuki Ikezoe
poincare: review+
Hiroyuki Ikezoe
Comment 1 2009-01-05 19:34:39 PST
Created attachment 26449 [details] Proposed patch
Holger Freyther
Comment 2 2009-01-07 16:34:54 PST
It looks right, is there any way to test it?
Holger Freyther
Comment 3 2009-01-07 16:48:24 PST
Comment on attachment 26449 [details] Proposed patch > Index: WebCore/ChangeLog > =================================================================== > --- WebCore/ChangeLog (revision 39635) > +++ WebCore/ChangeLog (working copy) > @@ -1,3 +1,14 @@ > +2009-01-05 Hiroyuki Ikezoe <poincare@ikezoe.net> > + > + Reviewed by NOBODY (OOPS!). > + > + Invoke pango_coverage_get with each Unicode character. please don't use tabs. Could you please also tell me what is broken with the other way of doing it? How you spotted it?
Hiroyuki Ikezoe
Comment 4 2009-01-07 18:02:34 PST
(In reply to comment #2) > It looks right, is there any way to test it? Unfortunately no. I found the issue when I read the code to solve bug #18546. Actually I can not reproduce bug #18546, so I *just* read the code.
Hiroyuki Ikezoe
Comment 5 2009-01-07 18:05:19 PST
Created attachment 26517 [details] expand tabs in ChangeLog.
Holger Freyther
Comment 6 2009-01-08 03:50:07 PST
Comment on attachment 26517 [details] expand tabs in ChangeLog. You shouldn't set r=+ yourself. :)
Holger Freyther
Comment 7 2009-01-08 04:34:20 PST
Landed in r39701. Let us see how this is working out.
Note You need to log in before you can comment on or make changes to this bug.