2009-01-08  Hiroyuki Ikezoe  <poincare@ikezoe.net>

Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=23127

        Invoke pango_coverage_get with each Unicode character.

        * platform/graphics/gtk/SimpleFontDataPango.cpp:
        (WebCore::SimpleFontData::containsCharacters):

Canonical link: https://commits.webkit.org/31900@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@39701 268f45cc-cd09-0410-ab3c-d52691b4dbfc