WebCore/platform/graphics/gtk/SimpleFontDataPango.cpp
@@ -97,19 +97,16 @@ bool SimpleFontData::containsCharacters(const UChar* characters, int length) con
 {
     bool result = true;
 
-    PangoCoverage* requested = pango_coverage_from_bytes((guchar*)characters, length);
-    PangoCoverage* available = pango_font_get_coverage(m_font.m_font, pango_language_get_default());
-    pango_coverage_max(requested, available);
+    PangoCoverage* coverage = pango_font_get_coverage(m_font.m_font, pango_language_get_default());
 
     for (int i = 0; i < length; i++) {
-        if (PANGO_COVERAGE_NONE == pango_coverage_get(requested, i)) {
+        if (PANGO_COVERAGE_NONE == pango_coverage_get(coverage, characters[i])) {
             result = false;
             break;
         }
     }
 
-    pango_coverage_unref(requested);
-    pango_coverage_unref(available);
+    pango_coverage_unref(coverage);
 
     return result;
 }
